# mico

./: .gitignore  manual.yml  package.json
.github/workflows/: main.yml
src-frontend/: package.json  rollup.config.js  tsconfig.json
src-frontend/public/: global.css  index.html
src-frontend/src/: App.svelte  OpenItem.svelte  Settings.svelte  Toast.svelte  api.ts  models.ts  store.ts  toast.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/migrations/2020-07-19-231755_create_rss_table/: down.sql  up.sql
src-tauri/migrations/2020-07-19-232341_create_tags_table/: up.sql
src-tauri/migrations/2020-07-19-232532_create_links_table/: up.sql
src-tauri/src/: cmd.rs  db.rs  main.rs  models.rs  schema.rs
