[package]
name = "mico"
version = "0.1.0"
description = "mico backend"
authors = [ "zach" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
rss = "1.9.0"
surf = "1.0.3"
anyhow = "1.0.31"
smol = "0.3.2"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = [ "sqlite", "chrono" ] }
webview_official = "0.0.1"
tauri = { version = "0.8.0", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
